# Cantris

./: .gitignore  CMakeLists.txt  DogRunningBite.xcf  RainsfordRighWalk.xcf  RainsfordRightWalk.xcf  RainsfordSpriteseet.xcf  RainsfordSpritesheet.xcf  Stand.xcf  rand.xcf
Designs/: Asteroid.xcf  AttackRainsford.xcf  Background.xcf  BackgroundLayers.xcf  Background_v2.1.xcf  Background_v2.2.xcf  Background_v2.3.xcf  Background_v2.4.xcf  Background_v2.xcf  BurlapWalk.xcf  DogBite.xcf  DogWalk.xcf  HeadLightSpritesheet_rainsford.xcf  IvanWalk.xcf  JailSample.xcf  LampSpriteSheet_rainsford.xcf  Level 1 Back.xcf  Light_Rainsford.xcf  Official_RainsfordSpritesheet.xcf  Rainsford Lamp.xcf  Rainsford StormLamp.xcf  Rainsford StormLampV1.xcf  Rainsford Test background.xcf  Rainsford Test background2.xcf  Rainsford Titlescreen.xcf  Rainsford TitlescreenV2.xcf  Rainsford TitlescreenV3.xcf  Rainsford.xcf  RainsfordAlt.xcf  RainsfordJump.xcf  RainsfordLamp.xcf  RainsfordLampAlt.xcf  RainsfordSpriteseet.xcf  RainsfordSpritesheet.xcf  RainsfordSpritesheet.xcf~HEAD  RainsfordSpritesheetV_2.xcf  Rainsford_Icon.xcf  Ship.xcf  ShipForward.xcf  ShipLeft.xcf  (+20 more)
assets/Animations/: crawl.ani  crouch.ani  death.ani  jump.ani  run.ani  wolfRun.ani  wolfStand.ani  wolfWalk.ani
assets/demo/: stand.ani
assets/scenes/: demo1.scn
assets/startMenu/: fire.ani  rainsford.ani
cmake/modules/: FindBox2D.cmake
include/Components/: Animated.hpp  Animator.hpp  Collidable.hpp  Collided.hpp  CollisionComp.hpp  Component.hpp  Entity.hpp  Graphical.hpp  GraphicsComp.hpp  Movable.hpp  Movement.hpp  Physical.hpp  (+5 more)
src/: CMakeLists.txt  main.cpp
src/Animation/: AnimatedSprite.cpp  Animation.cpp
src/Components/: Animated.cpp  Animator.cpp  CMakeLists.txt  Collidable.cpp  Collided.cpp  Component.cpp  Entity.cpp  Graphical.cpp  GraphicsComp.cpp  Movable.cpp  Movement.cpp  Physical.cpp  PhysicsComp.cpp  Renderable.cpp  Scriptable.cpp  Spatial.cpp
src/Components/Graphics/: GraphicsComp.cpp
src/Core/: AnimatedSprite.cpp  Animation.cpp  AssetManager.cpp  CMakeLists.txt  DebugDraw.cpp  GameWindow.cpp
src/Engine/: CMakeLists.txt  Camera.cpp  ComponentReaders.cpp  Engine.cpp  Entity.cpp  EntityLoader.cpp  LuaBindings.cpp  LuaComponentLoaders.cpp  LuaEntityLoader.cpp  LuaSceneLoader.cpp  Scene.cpp  SceneEditor.cpp  StartMenu.cpp
src/GUI/: CMakeLists.txt  StartMenu.cpp  StringSelector.cpp
src/Game/: Game.cpp
src/Game/Characters/: Player.cpp
src/Messages/: CMakeLists.txt  Message.cpp  StringMessage.cpp  VecMessage.cpp
src/System/: AssetManager.cpp  Engine.cpp  Entity.cpp  GameWindow.cpp
src/System/Animation/: AnimatedSprite.cpp  Animation.cpp
src/Systems/: CMakeLists.txt  CollisionSystem.cpp  GraphicsSystem.cpp  MovementSystem.cpp  PhysicsSystem.cpp  PlayerController.cpp  ScriptSystem.cpp  System.cpp
(+70 files in other folders)
